// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/unified-share-modal/UnifiedShareModal render() should not render a default component FTUX when prop is false 1`] = `
<Fragment>
  <Modal
    className="be-modal unified-share-modal"
    focusElementSelector=".toggle-simple"
    style={
      {
        "backdrop": {},
        "dialog": {},
      }
    }
    title={
      <UnifiedShareModalTitle
        isEmailLinkSectionExpanded={false}
        item={
          {
            "grantedPermissions": {
              "itemShare": true,
            },
            "hideCollaborators": false,
            "id": "111",
            "name": "test file",
            "type": "file",
          }
        }
        showCollaboratorList={false}
      />
    }
  >
    <UnifiedShareForm
      canRemoveCollaborators={false}
      classification={
        {
          "definition": undefined,
          "name": undefined,
        }
      }
      collaborationRestrictionWarning=""
      collaboratorsList={
        {
          "collaborators": [],
        }
      }
      createSharedLinkOnLoad={false}
      displayInModal={true}
      focusSharedLinkOnLoad={false}
      getInitialData={[MockFunction]}
      handleFtuxCloseClick={[Function]}
      initiallySelectedContacts={[]}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      inviteePermissions={
        [
          {
            "text": "Editor",
            "value": "Editor",
          },
        ]
      }
      isAllowEditSharedLinkForFileEnabled={false}
      isFetching={true}
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
        }
      }
      onRemoveCollaboratorClick={[Function]}
      openConfirmModal={[Function]}
      restrictedCollabEmails={[]}
      restrictedGroups={[]}
      sharedLink={{}}
      sharedLinkLoaded={false}
      shouldRenderFTUXTooltip={true}
      showCalloutForUser={false}
      trackingProps={
        {
          "inviteCollabTracking": {},
          "inviteCollabsEmailTracking": {},
          "modalTracking": {},
          "removeLinkConfirmModalTracking": {},
          "sharedLinkEmailTracking": {},
          "sharedLinkTracking": {},
        }
      }
    />
  </Modal>
</Fragment>
`;

exports[`features/unified-share-modal/UnifiedShareModal render() should not render a default component FTUX when state is false 1`] = `
<Fragment>
  <Modal
    className="be-modal unified-share-modal"
    focusElementSelector=".toggle-simple"
    style={
      {
        "backdrop": {},
        "dialog": {},
      }
    }
    title={
      <UnifiedShareModalTitle
        isEmailLinkSectionExpanded={false}
        item={
          {
            "grantedPermissions": {
              "itemShare": true,
            },
            "hideCollaborators": false,
            "id": "111",
            "name": "test file",
            "type": "file",
          }
        }
        showCollaboratorList={false}
      />
    }
  >
    <UnifiedShareForm
      canRemoveCollaborators={false}
      classification={
        {
          "definition": undefined,
          "name": undefined,
        }
      }
      collaborationRestrictionWarning=""
      collaboratorsList={
        {
          "collaborators": [],
        }
      }
      createSharedLinkOnLoad={false}
      displayInModal={true}
      focusSharedLinkOnLoad={false}
      getInitialData={[MockFunction]}
      handleFtuxCloseClick={[Function]}
      initiallySelectedContacts={[]}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      inviteePermissions={
        [
          {
            "text": "Editor",
            "value": "Editor",
          },
        ]
      }
      isAllowEditSharedLinkForFileEnabled={false}
      isFetching={true}
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
        }
      }
      onRemoveCollaboratorClick={[Function]}
      openConfirmModal={[Function]}
      restrictedCollabEmails={[]}
      restrictedGroups={[]}
      sharedLink={{}}
      sharedLinkLoaded={false}
      shouldRenderFTUXTooltip={false}
      showCalloutForUser={true}
      trackingProps={
        {
          "inviteCollabTracking": {},
          "inviteCollabsEmailTracking": {},
          "modalTracking": {},
          "removeLinkConfirmModalTracking": {},
          "sharedLinkEmailTracking": {},
          "sharedLinkTracking": {},
        }
      }
    />
  </Modal>
</Fragment>
`;

exports[`features/unified-share-modal/UnifiedShareModal render() should render a component with autofocus set for shared link when focusSharedLinkOnLoad is enabled and there is a shared link 1`] = `
<Fragment>
  <Modal
    className="be-modal unified-share-modal"
    focusElementSelector=".toggle-simple"
    style={
      {
        "backdrop": {},
        "dialog": {},
      }
    }
    title={
      <UnifiedShareModalTitle
        isEmailLinkSectionExpanded={false}
        item={
          {
            "grantedPermissions": {
              "itemShare": true,
            },
            "hideCollaborators": false,
            "id": "111",
            "name": "test file",
            "type": "file",
          }
        }
        showCollaboratorList={false}
      />
    }
  >
    <UnifiedShareForm
      canRemoveCollaborators={false}
      classification={
        {
          "definition": undefined,
          "name": undefined,
        }
      }
      collaborationRestrictionWarning=""
      collaboratorsList={
        {
          "collaborators": [],
        }
      }
      createSharedLinkOnLoad={false}
      displayInModal={true}
      focusSharedLinkOnLoad={true}
      getInitialData={[MockFunction]}
      handleFtuxCloseClick={[Function]}
      initiallySelectedContacts={[]}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      inviteePermissions={
        [
          {
            "text": "Editor",
            "value": "Editor",
          },
        ]
      }
      isAllowEditSharedLinkForFileEnabled={false}
      isFetching={true}
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
        }
      }
      onRemoveCollaboratorClick={[Function]}
      openConfirmModal={[Function]}
      restrictedCollabEmails={[]}
      restrictedGroups={[]}
      sharedLink={
        {
          "url": "https://foo.com",
        }
      }
      sharedLinkLoaded={true}
      shouldRenderFTUXTooltip={false}
      trackingProps={
        {
          "inviteCollabTracking": {},
          "inviteCollabsEmailTracking": {},
          "modalTracking": {},
          "removeLinkConfirmModalTracking": {},
          "sharedLinkEmailTracking": {},
          "sharedLinkTracking": {},
        }
      }
    />
  </Modal>
</Fragment>
`;

exports[`features/unified-share-modal/UnifiedShareModal render() should render a default component FTUX based on enabled prop and state 1`] = `
<Fragment>
  <Modal
    className="be-modal unified-share-modal"
    focusElementSelector=".toggle-simple"
    style={
      {
        "backdrop": {},
        "dialog": {},
      }
    }
    title={
      <UnifiedShareModalTitle
        isEmailLinkSectionExpanded={false}
        item={
          {
            "grantedPermissions": {
              "itemShare": true,
            },
            "hideCollaborators": false,
            "id": "111",
            "name": "test file",
            "type": "file",
          }
        }
        showCollaboratorList={false}
      />
    }
  >
    <UnifiedShareForm
      canRemoveCollaborators={false}
      classification={
        {
          "definition": undefined,
          "name": undefined,
        }
      }
      collaborationRestrictionWarning=""
      collaboratorsList={
        {
          "collaborators": [],
        }
      }
      createSharedLinkOnLoad={false}
      displayInModal={true}
      focusSharedLinkOnLoad={false}
      getInitialData={[MockFunction]}
      handleFtuxCloseClick={[Function]}
      initiallySelectedContacts={[]}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      inviteePermissions={
        [
          {
            "text": "Editor",
            "value": "Editor",
          },
        ]
      }
      isAllowEditSharedLinkForFileEnabled={false}
      isFetching={true}
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
        }
      }
      onRemoveCollaboratorClick={[Function]}
      openConfirmModal={[Function]}
      restrictedCollabEmails={[]}
      restrictedGroups={[]}
      sharedLink={{}}
      sharedLinkLoaded={false}
      shouldRenderFTUXTooltip={true}
      showCalloutForUser={true}
      trackingProps={
        {
          "inviteCollabTracking": {},
          "inviteCollabsEmailTracking": {},
          "modalTracking": {},
          "removeLinkConfirmModalTracking": {},
          "sharedLinkEmailTracking": {},
          "sharedLinkTracking": {},
        }
      }
    />
  </Modal>
</Fragment>
`;

exports[`features/unified-share-modal/UnifiedShareModal render() should render a default component in initial loading state 1`] = `
<Fragment>
  <Modal
    className="be-modal unified-share-modal"
    focusElementSelector=".toggle-simple"
    style={
      {
        "backdrop": {},
        "dialog": {},
      }
    }
    title={
      <UnifiedShareModalTitle
        isEmailLinkSectionExpanded={false}
        item={
          {
            "grantedPermissions": {
              "itemShare": true,
            },
            "hideCollaborators": false,
            "id": "111",
            "name": "test file",
            "type": "file",
          }
        }
        showCollaboratorList={false}
      />
    }
  >
    <UnifiedShareForm
      canRemoveCollaborators={false}
      classification={
        {
          "definition": undefined,
          "name": undefined,
        }
      }
      collaborationRestrictionWarning=""
      collaboratorsList={
        {
          "collaborators": [],
        }
      }
      createSharedLinkOnLoad={false}
      displayInModal={true}
      focusSharedLinkOnLoad={false}
      getInitialData={[MockFunction]}
      handleFtuxCloseClick={[Function]}
      initiallySelectedContacts={[]}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      inviteePermissions={
        [
          {
            "text": "Editor",
            "value": "Editor",
          },
        ]
      }
      isAllowEditSharedLinkForFileEnabled={false}
      isFetching={true}
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
        }
      }
      onRemoveCollaboratorClick={[Function]}
      openConfirmModal={[Function]}
      restrictedCollabEmails={[]}
      restrictedGroups={[]}
      sharedLink={{}}
      sharedLinkLoaded={false}
      shouldRenderFTUXTooltip={false}
      trackingProps={
        {
          "inviteCollabTracking": {},
          "inviteCollabsEmailTracking": {},
          "modalTracking": {},
          "removeLinkConfirmModalTracking": {},
          "sharedLinkEmailTracking": {},
          "sharedLinkTracking": {},
        }
      }
    />
  </Modal>
</Fragment>
`;

exports[`features/unified-share-modal/UnifiedShareModal render() should render a default component when showing invite section expanded 1`] = `
<Fragment>
  <Modal
    className="be-modal unified-share-modal"
    focusElementSelector=".toggle-simple"
    style={
      {
        "backdrop": {},
        "dialog": {},
      }
    }
    title={
      <UnifiedShareModalTitle
        isEmailLinkSectionExpanded={false}
        item={
          {
            "grantedPermissions": {
              "itemShare": true,
            },
            "hideCollaborators": false,
            "id": "111",
            "name": "test file",
            "type": "file",
          }
        }
        showCollaboratorList={false}
      />
    }
  >
    <UnifiedShareForm
      canRemoveCollaborators={false}
      classification={
        {
          "definition": undefined,
          "name": undefined,
        }
      }
      collaborationRestrictionWarning=""
      collaboratorsList={
        {
          "collaborators": [],
        }
      }
      createSharedLinkOnLoad={false}
      displayInModal={true}
      focusSharedLinkOnLoad={false}
      getInitialData={[MockFunction]}
      handleFtuxCloseClick={[Function]}
      initiallySelectedContacts={[]}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      inviteePermissions={
        [
          {
            "text": "Editor",
            "value": "Editor",
          },
        ]
      }
      isAllowEditSharedLinkForFileEnabled={false}
      isFetching={false}
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
        }
      }
      onRemoveCollaboratorClick={[Function]}
      openConfirmModal={[Function]}
      restrictedCollabEmails={[]}
      restrictedGroups={[]}
      sharedLink={{}}
      sharedLinkLoaded={false}
      shouldRenderFTUXTooltip={false}
      trackingProps={
        {
          "inviteCollabTracking": {},
          "inviteCollabsEmailTracking": {},
          "modalTracking": {},
          "removeLinkConfirmModalTracking": {},
          "sharedLinkEmailTracking": {},
          "sharedLinkTracking": {},
        }
      }
    />
  </Modal>
</Fragment>
`;

exports[`features/unified-share-modal/UnifiedShareModal render() should render a default component when the user cannot invite collaborators due to item type of weblink 1`] = `
<Fragment>
  <Modal
    className="be-modal unified-share-modal"
    focusElementSelector=".toggle-simple"
    style={
      {
        "backdrop": {},
        "dialog": {},
      }
    }
    title={
      <UnifiedShareModalTitle
        isEmailLinkSectionExpanded={false}
        item={
          {
            "grantedPermissions": {
              "itemShare": true,
            },
            "hideCollaborators": false,
            "id": "111",
            "name": "test file",
            "type": "web_link",
          }
        }
        showCollaboratorList={false}
      />
    }
  >
    <UnifiedShareForm
      canInvite={false}
      canRemoveCollaborators={false}
      classification={
        {
          "definition": undefined,
          "name": undefined,
        }
      }
      collaborationRestrictionWarning=""
      collaboratorsList={
        {
          "collaborators": [],
        }
      }
      createSharedLinkOnLoad={false}
      displayInModal={true}
      focusSharedLinkOnLoad={false}
      getInitialData={[MockFunction]}
      handleFtuxCloseClick={[Function]}
      initiallySelectedContacts={[]}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      inviteePermissions={
        [
          {
            "text": "Editor",
            "value": "Editor",
          },
        ]
      }
      isAllowEditSharedLinkForFileEnabled={false}
      isFetching={false}
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "web_link",
        }
      }
      onRemoveCollaboratorClick={[Function]}
      openConfirmModal={[Function]}
      restrictedCollabEmails={[]}
      restrictedGroups={[]}
      sharedLink={{}}
      sharedLinkLoaded={false}
      shouldRenderFTUXTooltip={false}
      trackingProps={
        {
          "inviteCollabTracking": {},
          "inviteCollabsEmailTracking": {},
          "modalTracking": {},
          "removeLinkConfirmModalTracking": {},
          "sharedLinkEmailTracking": {},
          "sharedLinkTracking": {},
        }
      }
    />
  </Modal>
</Fragment>
`;

exports[`features/unified-share-modal/UnifiedShareModal render() should render a default component when the user cannot invite collaborators due to permissions 1`] = `
<Fragment>
  <Modal
    className="be-modal unified-share-modal"
    focusElementSelector=".toggle-simple"
    style={
      {
        "backdrop": {},
        "dialog": {},
      }
    }
    title={
      <UnifiedShareModalTitle
        isEmailLinkSectionExpanded={false}
        item={
          {
            "grantedPermissions": {
              "itemShare": true,
            },
            "hideCollaborators": false,
            "id": "111",
            "name": "test file",
            "type": "folder",
          }
        }
        showCollaboratorList={false}
      />
    }
  >
    <UnifiedShareForm
      canInvite={false}
      canRemoveCollaborators={false}
      classification={
        {
          "definition": undefined,
          "name": undefined,
        }
      }
      collaborationRestrictionWarning=""
      collaboratorsList={
        {
          "collaborators": [],
        }
      }
      createSharedLinkOnLoad={false}
      displayInModal={true}
      focusSharedLinkOnLoad={false}
      getInitialData={[MockFunction]}
      handleFtuxCloseClick={[Function]}
      initiallySelectedContacts={[]}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      inviteePermissions={
        [
          {
            "text": "Editor",
            "value": "Editor",
          },
        ]
      }
      isAllowEditSharedLinkForFileEnabled={false}
      isFetching={true}
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "folder",
        }
      }
      onRemoveCollaboratorClick={[Function]}
      openConfirmModal={[Function]}
      restrictedCollabEmails={[]}
      restrictedGroups={[]}
      sharedLink={{}}
      sharedLinkLoaded={false}
      shouldRenderFTUXTooltip={false}
      trackingProps={
        {
          "inviteCollabTracking": {},
          "inviteCollabsEmailTracking": {},
          "modalTracking": {},
          "removeLinkConfirmModalTracking": {},
          "sharedLinkEmailTracking": {},
          "sharedLinkTracking": {},
        }
      }
    />
  </Modal>
</Fragment>
`;

exports[`features/unified-share-modal/UnifiedShareModal render() should render a default component with collaboration restriction warning specified and invite section is NOT expanded 1`] = `
<Fragment>
  <Modal
    className="be-modal unified-share-modal"
    focusElementSelector=".bdl-PillSelector-input"
    style={
      {
        "backdrop": {},
        "dialog": {},
      }
    }
    title={
      <UnifiedShareModalTitle
        isEmailLinkSectionExpanded={false}
        item={
          {
            "grantedPermissions": {
              "itemShare": true,
            },
            "hideCollaborators": false,
            "id": "111",
            "name": "test file",
            "type": "file",
          }
        }
        showCollaboratorList={false}
      />
    }
  >
    <UnifiedShareForm
      canInvite={true}
      canRemoveCollaborators={false}
      classification={
        {
          "definition": undefined,
          "name": undefined,
        }
      }
      collaborationRestrictionWarning="Collaboration invitations can only be sent to people within company."
      collaboratorsList={
        {
          "collaborators": [],
        }
      }
      createSharedLinkOnLoad={false}
      displayInModal={true}
      focusSharedLinkOnLoad={false}
      getInitialData={[MockFunction]}
      handleFtuxCloseClick={[Function]}
      initiallySelectedContacts={[]}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      inviteePermissions={
        [
          {
            "text": "Editor",
            "value": "Editor",
          },
        ]
      }
      isAllowEditSharedLinkForFileEnabled={false}
      isFetching={false}
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
        }
      }
      onRemoveCollaboratorClick={[Function]}
      openConfirmModal={[Function]}
      restrictedCollabEmails={[]}
      restrictedGroups={[]}
      sharedLink={{}}
      sharedLinkLoaded={false}
      shouldRenderFTUXTooltip={false}
      trackingProps={
        {
          "inviteCollabTracking": {},
          "inviteCollabsEmailTracking": {},
          "modalTracking": {},
          "removeLinkConfirmModalTracking": {},
          "sharedLinkEmailTracking": {},
          "sharedLinkTracking": {},
        }
      }
    />
  </Modal>
</Fragment>
`;

exports[`features/unified-share-modal/UnifiedShareModal render() should render a default component with collaboration restriction warning specified and invite section is expanded 1`] = `
<Fragment>
  <Modal
    className="be-modal unified-share-modal"
    focusElementSelector=".bdl-PillSelector-input"
    style={
      {
        "backdrop": {},
        "dialog": {},
      }
    }
    title={
      <UnifiedShareModalTitle
        isEmailLinkSectionExpanded={false}
        item={
          {
            "grantedPermissions": {
              "itemShare": true,
            },
            "hideCollaborators": false,
            "id": "111",
            "name": "test file",
            "type": "file",
          }
        }
        showCollaboratorList={false}
      />
    }
  >
    <UnifiedShareForm
      canInvite={true}
      canRemoveCollaborators={false}
      classification={
        {
          "definition": undefined,
          "name": undefined,
        }
      }
      collaborationRestrictionWarning="Collaboration invitations can only be sent to people within company."
      collaboratorsList={
        {
          "collaborators": [],
        }
      }
      createSharedLinkOnLoad={false}
      displayInModal={true}
      focusSharedLinkOnLoad={false}
      getInitialData={[MockFunction]}
      handleFtuxCloseClick={[Function]}
      initiallySelectedContacts={[]}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      inviteePermissions={
        [
          {
            "text": "Editor",
            "value": "Editor",
          },
        ]
      }
      isAllowEditSharedLinkForFileEnabled={false}
      isFetching={false}
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
        }
      }
      onRemoveCollaboratorClick={[Function]}
      openConfirmModal={[Function]}
      restrictedCollabEmails={[]}
      restrictedGroups={[]}
      sharedLink={{}}
      sharedLinkLoaded={false}
      shouldRenderFTUXTooltip={false}
      trackingProps={
        {
          "inviteCollabTracking": {},
          "inviteCollabsEmailTracking": {},
          "modalTracking": {},
          "removeLinkConfirmModalTracking": {},
          "sharedLinkEmailTracking": {},
          "sharedLinkTracking": {},
        }
      }
    />
  </Modal>
</Fragment>
`;

exports[`features/unified-share-modal/UnifiedShareModal render() should render a default component with collaborator list if showCollaboratorList state is set 1`] = `
<Fragment>
  <Modal
    className="be-modal unified-share-modal"
    focusElementSelector=".toggle-simple"
    style={
      {
        "backdrop": {},
        "dialog": {},
      }
    }
    title={
      <UnifiedShareModalTitle
        isEmailLinkSectionExpanded={false}
        item={
          {
            "grantedPermissions": {
              "itemShare": true,
            },
            "hideCollaborators": false,
            "id": "111",
            "name": "test file",
            "type": "file",
          }
        }
        showCollaboratorList={true}
      />
    }
  >
    <UnifiedShareForm
      canRemoveCollaborators={false}
      classification={
        {
          "definition": undefined,
          "name": undefined,
        }
      }
      collaborationRestrictionWarning=""
      collaboratorsList={
        {
          "collaborators": [
            {
              "hasCustomAvatar": false,
              "name": "test a",
            },
            {
              "hasCustomAvatar": false,
              "name": "test b",
            },
          ],
        }
      }
      createSharedLinkOnLoad={false}
      displayInModal={true}
      focusSharedLinkOnLoad={false}
      getInitialData={[MockFunction]}
      handleFtuxCloseClick={[Function]}
      initiallySelectedContacts={[]}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      inviteePermissions={
        [
          {
            "text": "Editor",
            "value": "Editor",
          },
        ]
      }
      isAllowEditSharedLinkForFileEnabled={false}
      isFetching={true}
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
        }
      }
      onRemoveCollaboratorClick={[Function]}
      openConfirmModal={[Function]}
      restrictedCollabEmails={[]}
      restrictedGroups={[]}
      sharedLink={{}}
      sharedLinkLoaded={false}
      shouldRenderFTUXTooltip={false}
      trackingProps={
        {
          "inviteCollabTracking": {},
          "inviteCollabsEmailTracking": {},
          "modalTracking": {},
          "removeLinkConfirmModalTracking": {},
          "sharedLinkEmailTracking": {},
          "sharedLinkTracking": {},
        }
      }
    />
  </Modal>
</Fragment>
`;

exports[`features/unified-share-modal/UnifiedShareModal render() should render a default component with collaborator list when showCollaboratorList state is true 1`] = `
<Fragment>
  <Modal
    className="be-modal unified-share-modal"
    focusElementSelector=".toggle-simple"
    style={
      {
        "backdrop": {},
        "dialog": {},
      }
    }
    title={
      <UnifiedShareModalTitle
        isEmailLinkSectionExpanded={false}
        item={
          {
            "grantedPermissions": {
              "itemShare": true,
            },
            "hideCollaborators": false,
            "id": "111",
            "name": "test file",
            "type": "file",
          }
        }
        showCollaboratorList={true}
      />
    }
  >
    <UnifiedShareForm
      canRemoveCollaborators={true}
      classification={
        {
          "definition": undefined,
          "name": undefined,
        }
      }
      collaborationRestrictionWarning=""
      collaboratorsList={
        {
          "collaborators": [
            {
              "hasCustomAvatar": false,
              "isRemovable": false,
              "name": "test a",
            },
            {
              "hasCustomAvatar": false,
              "isRemovable": true,
              "name": "test b",
            },
          ],
        }
      }
      createSharedLinkOnLoad={false}
      displayInModal={true}
      focusSharedLinkOnLoad={false}
      getInitialData={[MockFunction]}
      handleFtuxCloseClick={[Function]}
      initiallySelectedContacts={[]}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      inviteePermissions={
        [
          {
            "text": "Editor",
            "value": "Editor",
          },
        ]
      }
      isAllowEditSharedLinkForFileEnabled={false}
      isFetching={true}
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
        }
      }
      onRemoveCollaborator={[MockFunction]}
      onRemoveCollaboratorClick={[Function]}
      openConfirmModal={[Function]}
      restrictedCollabEmails={[]}
      restrictedGroups={[]}
      sharedLink={{}}
      sharedLinkLoaded={false}
      shouldRenderFTUXTooltip={false}
      trackingProps={
        {
          "inviteCollabTracking": {},
          "inviteCollabsEmailTracking": {},
          "modalTracking": {},
          "removeLinkConfirmModalTracking": {},
          "sharedLinkEmailTracking": {},
          "sharedLinkTracking": {},
        }
      }
    />
  </Modal>
</Fragment>
`;

exports[`features/unified-share-modal/UnifiedShareModal render() should render a default component with confirm modal open 1`] = `
<Fragment>
  <Modal
    className="be-modal unified-share-modal"
    focusElementSelector=".toggle-simple"
    isOpen={false}
    style={
      {
        "backdrop": {},
        "dialog": {},
      }
    }
    title={
      <UnifiedShareModalTitle
        isEmailLinkSectionExpanded={false}
        item={
          {
            "grantedPermissions": {
              "itemShare": true,
            },
            "hideCollaborators": false,
            "id": "111",
            "name": "test file",
            "type": "file",
          }
        }
        showCollaboratorList={false}
      />
    }
  >
    <UnifiedShareForm
      canRemoveCollaborators={false}
      classification={
        {
          "definition": undefined,
          "name": undefined,
        }
      }
      collaborationRestrictionWarning=""
      collaboratorsList={
        {
          "collaborators": [],
        }
      }
      createSharedLinkOnLoad={false}
      displayInModal={true}
      focusSharedLinkOnLoad={false}
      getInitialData={[MockFunction]}
      handleFtuxCloseClick={[Function]}
      initiallySelectedContacts={[]}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      inviteePermissions={
        [
          {
            "text": "Editor",
            "value": "Editor",
          },
        ]
      }
      isAllowEditSharedLinkForFileEnabled={false}
      isFetching={false}
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
        }
      }
      onRemoveCollaboratorClick={[Function]}
      openConfirmModal={[Function]}
      restrictedCollabEmails={[]}
      restrictedGroups={[]}
      sharedLink={{}}
      sharedLinkLoaded={false}
      shouldRenderFTUXTooltip={false}
      trackingProps={
        {
          "inviteCollabTracking": {},
          "inviteCollabsEmailTracking": {},
          "modalTracking": {},
          "removeLinkConfirmModalTracking": {},
          "sharedLinkEmailTracking": {},
          "sharedLinkTracking": {},
        }
      }
    />
  </Modal>
  <RemoveLinkConfirmModal
    isOpen={true}
    onRequestClose={[Function]}
    removeLink={[Function]}
  />
</Fragment>
`;

exports[`features/unified-share-modal/UnifiedShareModal render() should render a default component with confirm remove collaborator modal open 1`] = `
<Fragment>
  <Modal
    className="be-modal unified-share-modal"
    focusElementSelector=".toggle-simple"
    isOpen={false}
    style={
      {
        "backdrop": {},
        "dialog": {},
      }
    }
    title={
      <UnifiedShareModalTitle
        isEmailLinkSectionExpanded={false}
        item={
          {
            "grantedPermissions": {
              "itemShare": true,
            },
            "hideCollaborators": false,
            "id": "111",
            "name": "test file",
            "type": "file",
          }
        }
        showCollaboratorList={false}
      />
    }
  >
    <UnifiedShareForm
      canRemoveCollaborators={true}
      classification={
        {
          "definition": undefined,
          "name": undefined,
        }
      }
      collaborationRestrictionWarning=""
      collaboratorsList={
        {
          "collaborators": [],
        }
      }
      createSharedLinkOnLoad={false}
      displayInModal={true}
      focusSharedLinkOnLoad={false}
      getInitialData={[MockFunction]}
      handleFtuxCloseClick={[Function]}
      initiallySelectedContacts={[]}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      inviteePermissions={
        [
          {
            "text": "Editor",
            "value": "Editor",
          },
        ]
      }
      isAllowEditSharedLinkForFileEnabled={false}
      isFetching={false}
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
        }
      }
      onRemoveCollaborator={[MockFunction]}
      onRemoveCollaboratorClick={[Function]}
      openConfirmModal={[Function]}
      restrictedCollabEmails={[]}
      restrictedGroups={[]}
      sharedLink={{}}
      sharedLinkLoaded={false}
      shouldRenderFTUXTooltip={false}
      trackingProps={
        {
          "inviteCollabTracking": {},
          "inviteCollabsEmailTracking": {},
          "modalTracking": {},
          "removeLinkConfirmModalTracking": {},
          "sharedLinkEmailTracking": {},
          "sharedLinkTracking": {},
        }
      }
    />
  </Modal>
  <RemoveCollaboratorConfirmModal
    collaborator={
      {
        "hasCustomAvatar": false,
        "name": "Collaborator a",
      }
    }
    isOpen={true}
    modalProps={
      {
        "className": "remove-collaborator-confirm-modal",
      }
    }
    onRequestClose={[Function]}
    onSubmit={[Function]}
  />
</Fragment>
`;

exports[`features/unified-share-modal/UnifiedShareModal render() should render a default component with correct Focus element and props when focusSharedLinkOnLoad is enabled 1`] = `
<Fragment>
  <Modal
    className="be-modal unified-share-modal"
    focusElementSelector=".toggle-simple"
    style={
      {
        "backdrop": {},
        "dialog": {},
      }
    }
    title={
      <UnifiedShareModalTitle
        isEmailLinkSectionExpanded={false}
        item={
          {
            "grantedPermissions": {
              "itemShare": true,
            },
            "hideCollaborators": false,
            "id": "111",
            "name": "test file",
            "type": "file",
          }
        }
        showCollaboratorList={false}
      />
    }
  >
    <UnifiedShareForm
      canRemoveCollaborators={false}
      classification={
        {
          "definition": undefined,
          "name": undefined,
        }
      }
      collaborationRestrictionWarning=""
      collaboratorsList={
        {
          "collaborators": [],
        }
      }
      createSharedLinkOnLoad={false}
      displayInModal={true}
      focusSharedLinkOnLoad={true}
      getInitialData={[MockFunction]}
      handleFtuxCloseClick={[Function]}
      initiallySelectedContacts={[]}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      inviteePermissions={
        [
          {
            "text": "Editor",
            "value": "Editor",
          },
        ]
      }
      isAllowEditSharedLinkForFileEnabled={false}
      isFetching={true}
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
        }
      }
      onRemoveCollaboratorClick={[Function]}
      openConfirmModal={[Function]}
      restrictedCollabEmails={[]}
      restrictedGroups={[]}
      sharedLink={
        {
          "url": "https://foo.com",
        }
      }
      sharedLinkLoaded={false}
      shouldRenderFTUXTooltip={false}
      trackingProps={
        {
          "inviteCollabTracking": {},
          "inviteCollabsEmailTracking": {},
          "modalTracking": {},
          "removeLinkConfirmModalTracking": {},
          "sharedLinkEmailTracking": {},
          "sharedLinkTracking": {},
        }
      }
    />
  </Modal>
</Fragment>
`;

exports[`features/unified-share-modal/UnifiedShareModal render() should render a default component with default props 1`] = `
<Fragment>
  <Modal
    className="be-modal unified-share-modal"
    focusElementSelector=".toggle-simple"
    style={
      {
        "backdrop": {},
        "dialog": {},
      }
    }
    title={
      <UnifiedShareModalTitle
        isEmailLinkSectionExpanded={false}
        item={
          {
            "grantedPermissions": {
              "itemShare": true,
            },
            "hideCollaborators": false,
            "id": "111",
            "name": "test file",
            "type": "file",
          }
        }
        showCollaboratorList={false}
      />
    }
  >
    <UnifiedShareForm
      canRemoveCollaborators={false}
      classification={
        {
          "definition": undefined,
          "name": undefined,
        }
      }
      collaborationRestrictionWarning=""
      collaboratorsList={
        {
          "collaborators": [],
        }
      }
      createSharedLinkOnLoad={false}
      displayInModal={true}
      focusSharedLinkOnLoad={false}
      getInitialData={[MockFunction]}
      handleFtuxCloseClick={[Function]}
      initiallySelectedContacts={[]}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      inviteePermissions={
        [
          {
            "text": "Editor",
            "value": "Editor",
          },
        ]
      }
      isAllowEditSharedLinkForFileEnabled={false}
      isFetching={false}
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
        }
      }
      onRemoveCollaboratorClick={[Function]}
      openConfirmModal={[Function]}
      restrictedCollabEmails={[]}
      restrictedGroups={[]}
      sharedLink={{}}
      sharedLinkLoaded={false}
      shouldRenderFTUXTooltip={false}
      trackingProps={
        {
          "inviteCollabTracking": {},
          "inviteCollabsEmailTracking": {},
          "modalTracking": {},
          "removeLinkConfirmModalTracking": {},
          "sharedLinkEmailTracking": {},
          "sharedLinkTracking": {},
        }
      }
    />
  </Modal>
</Fragment>
`;

exports[`features/unified-share-modal/UnifiedShareModal render() should render a default component with invitee permissions listed 1`] = `
<Fragment>
  <Modal
    className="be-modal unified-share-modal"
    focusElementSelector=".bdl-PillSelector-input"
    style={
      {
        "backdrop": {},
        "dialog": {},
      }
    }
    title={
      <UnifiedShareModalTitle
        isEmailLinkSectionExpanded={false}
        item={
          {
            "grantedPermissions": {
              "itemShare": true,
            },
            "hideCollaborators": false,
            "id": "111",
            "name": "test file",
            "type": "file",
          }
        }
        showCollaboratorList={false}
      />
    }
  >
    <UnifiedShareForm
      canInvite={true}
      canRemoveCollaborators={false}
      classification={
        {
          "definition": undefined,
          "name": undefined,
        }
      }
      collaborationRestrictionWarning=""
      collaboratorsList={
        {
          "collaborators": [],
        }
      }
      createSharedLinkOnLoad={false}
      displayInModal={true}
      focusSharedLinkOnLoad={false}
      getInitialData={[MockFunction]}
      handleFtuxCloseClick={[Function]}
      initiallySelectedContacts={[]}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      inviteePermissions={
        [
          "Editor",
        ]
      }
      isAllowEditSharedLinkForFileEnabled={false}
      isFetching={false}
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
        }
      }
      onRemoveCollaboratorClick={[Function]}
      openConfirmModal={[Function]}
      restrictedCollabEmails={[]}
      restrictedGroups={[]}
      sharedLink={{}}
      sharedLinkLoaded={false}
      shouldRenderFTUXTooltip={false}
      submitting={false}
      trackingProps={
        {
          "inviteCollabTracking": {},
          "inviteCollabsEmailTracking": {},
          "modalTracking": {},
          "removeLinkConfirmModalTracking": {},
          "sharedLinkEmailTracking": {},
          "sharedLinkTracking": {},
        }
      }
    />
  </Modal>
</Fragment>
`;

exports[`features/unified-share-modal/UnifiedShareModal render() should render a default component with send invite error specified 1`] = `
<Fragment>
  <Modal
    className="be-modal unified-share-modal"
    focusElementSelector=".bdl-PillSelector-input"
    style={
      {
        "backdrop": {},
        "dialog": {},
      }
    }
    title={
      <UnifiedShareModalTitle
        isEmailLinkSectionExpanded={false}
        item={
          {
            "grantedPermissions": {
              "itemShare": true,
            },
            "hideCollaborators": false,
            "id": "111",
            "name": "test file",
            "type": "file",
          }
        }
        showCollaboratorList={false}
      />
    }
  >
    <UnifiedShareForm
      canInvite={true}
      canRemoveCollaborators={false}
      classification={
        {
          "definition": undefined,
          "name": undefined,
        }
      }
      collaborationRestrictionWarning=""
      collaboratorsList={
        {
          "collaborators": [],
        }
      }
      createSharedLinkOnLoad={false}
      displayInModal={true}
      focusSharedLinkOnLoad={false}
      getInitialData={[MockFunction]}
      handleFtuxCloseClick={[Function]}
      initiallySelectedContacts={[]}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      inviteePermissions={
        [
          {
            "text": "Editor",
            "value": "Editor",
          },
        ]
      }
      isAllowEditSharedLinkForFileEnabled={false}
      isFetching={false}
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
        }
      }
      onRemoveCollaboratorClick={[Function]}
      openConfirmModal={[Function]}
      restrictedCollabEmails={[]}
      restrictedGroups={[]}
      sendInvitesError={
        <span>
          Some Error
        </span>
      }
      sharedLink={{}}
      sharedLinkLoaded={false}
      shouldRenderFTUXTooltip={false}
      trackingProps={
        {
          "inviteCollabTracking": {},
          "inviteCollabsEmailTracking": {},
          "modalTracking": {},
          "removeLinkConfirmModalTracking": {},
          "sharedLinkEmailTracking": {},
          "sharedLinkTracking": {},
        }
      }
    />
  </Modal>
</Fragment>
`;

exports[`features/unified-share-modal/UnifiedShareModal render() should render a default component with upgrade CTA when showUpgradeOptions is enabled 1`] = `
<Fragment>
  <Modal
    className="be-modal unified-share-modal"
    focusElementSelector=".bdl-PillSelector-input"
    style={
      {
        "backdrop": {},
        "dialog": {},
      }
    }
    title={
      <UnifiedShareModalTitle
        isEmailLinkSectionExpanded={false}
        item={
          {
            "grantedPermissions": {
              "itemShare": true,
            },
            "hideCollaborators": false,
            "id": "111",
            "name": "test file",
            "type": "file",
          }
        }
        showCollaboratorList={false}
      />
    }
  >
    <UnifiedShareForm
      canInvite={true}
      canRemoveCollaborators={false}
      classification={
        {
          "definition": undefined,
          "name": undefined,
        }
      }
      collaborationRestrictionWarning=""
      collaboratorsList={
        {
          "collaborators": [],
        }
      }
      createSharedLinkOnLoad={false}
      displayInModal={true}
      focusSharedLinkOnLoad={false}
      getInitialData={[MockFunction]}
      handleFtuxCloseClick={[Function]}
      initiallySelectedContacts={[]}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      inviteePermissions={
        [
          {
            "text": "Editor",
            "value": "Editor",
          },
        ]
      }
      isAllowEditSharedLinkForFileEnabled={false}
      isFetching={false}
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
        }
      }
      onRemoveCollaboratorClick={[Function]}
      openConfirmModal={[Function]}
      restrictedCollabEmails={[]}
      restrictedGroups={[]}
      sharedLink={{}}
      sharedLinkLoaded={false}
      shouldRenderFTUXTooltip={false}
      showUpgradeOptions={true}
      trackingProps={
        {
          "inviteCollabTracking": {},
          "inviteCollabsEmailTracking": {},
          "modalTracking": {},
          "removeLinkConfirmModalTracking": {},
          "sharedLinkEmailTracking": {},
          "sharedLinkTracking": {},
        }
      }
    />
  </Modal>
</Fragment>
`;

exports[`features/unified-share-modal/UnifiedShareModal render() should render an allShareRestrictionWarning message when it is available 1`] = `null`;
